--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 
 
     <!-- begin table -->
-    <div class="container">
+    <!-- <div class="container">
       <table class="table table-striped">
         <thead class="thead-dark">
           <tr>
@@ -74,7 +74,7 @@
           {% endif %}
         </tbody>
       </table>
-    </div>
+    </div> -->
     <!-- end table -->
 
 
