--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -20,4 +20,10 @@
     text-align: center;
 }
 
+
+/* style the flashed messages here later */
+/* .flash{
+
+} */
+
 /* Make NAVBar items larger/better spaced out */
