--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container-fluid padding">
-    <div class="row padding align-items-stretch">
+    <div class="row padding align-items-stretch text-center">
         <div class="col-md-4 align-self-center">
             <div class="card">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/ferb.png') }}" alt="Ameya Gharpure">
