--- a/site/templates/layout.html
+++ b/site/templates/layout.html
@@ -9,14 +9,9 @@
         <script src="https://kit.fontawesome.com/acaece2866.js" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
-
-        <style>
-            
-        </style>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
-        <!-- NAVBAR -->
         <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ url_for('home') }}"><img alt="Home" src="{{ url_for('static', filename='images/logo.png') }}" width="30" height="44"></a>
@@ -35,16 +30,27 @@
                 </div>
             </div>
         </nav>
-
-        
         {% block content %}{% endblock content %}
-
         <div class="container">
             <hr class="my-4">
         </div>
-        
-        <!-- FOOTER ALWAYS GO HERE -->
-
+        <footer>
+            <div class="container-fluid padding">
+                <div class="row text-center padding">
+                    <div class="col-12">
+                        <h2>Connect</h2>
+                    </div>
+                    <div class="col-12 social padding">
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="mailto:ameyapg2@illinois.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                        <a href="https://github.com/ameyagh" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- bootstrap js -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
