--- a/site/templates/visual.html
+++ b/site/templates/visual.html
@@ -1,1 +1,4 @@
-
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="center" style="color: aquamarine;">HEY AMEYA YOU SEXY BEAST</h1>
+{% endblock content %}
