--- a/site/templates/layout.html
+++ b/site/templates/layout.html
@@ -31,16 +31,16 @@
             </div>
         </nav>
         {% block content %}{% endblock content %}
-        <div class="container">
+        <!-- <div class="container">
             <hr class="my-4">
-        </div>
+        </div> -->
         <footer>
             <div class="container-fluid padding">
                 <div class="row text-center padding">
-                    <div class="col-12">
-                        <h2>Connect</h2>
+                    <div class="col-12 social my-col">
+                        <h2>Connect With Us</h2>
                     </div>
-                    <div class="col-12 social padding">
+                    <div class="col-12 my-col social padding social-buttons">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
