--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-md-3 col-lg-3 col-xl-3">
             <a href="https://registrar.illinois.edu/academic-records/dars-audit/" target="_blank">
-                <button type="button" class="btn btn-outline-secondary">Generate Report</button>
+                <button type="button" class="btn btn-outline-secondary heh">Generate Report</button>
             </a>
         </div>
     </div>
