--- a/site/templates/practice.html
+++ b/site/templates/practice.html
@@ -5,15 +5,7 @@
         <title>Practice</title>
     </head>
     <body>
-        <div id="my_dataviz">
-
-        </div>
-
-
-
-        <svg>
-
-        </svg>
+        <p>HEY SEXY THANG</p>
 
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="index.js"></script>
