--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -81,6 +81,11 @@ body {
     color:#337ab7
 }
 
+.heh{
+    color: white;
+    outline-color: white;
+}
+
 footer{
     background-color: #3f3f3f;
     /* width: 100%; */
