--- a/site/templates/visual.html
+++ b/site/templates/visual.html
@@ -1,6 +1,108 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1 class="center" style="color: aquamarine;">HEY AMEYA YOU SEXY BEAST</h1>
+<script>
+    
+    window.onload = function() {
+
+        var data = {{ graph_list | safe }};
+    
+        console.log(data)
+    
+    
+        //d3 starts here
+        width = 500;
+            height = 200
+            margin = ({top: 30, right: 0, bottom: 30, left: 40})
+    
+            x = d3.scaleBand()
+        .domain(d3.range(data.length))
+        .range([margin.left, width - margin.right])
+        .padding(0.1)
+    
+    
+    
+        y = d3.scaleLinear()
+        .domain([0, 100]).nice()
+        .range([height - margin.bottom, margin.top]);
+    
+    
+        yy = d3.scaleLinear()
+        .domain([0,data.length]).nice()
+        .range([0, height * data.length]);
+    
+        yaxisscale = d3.scaleLinear()
+                        .domain([0, 100])
+                        .range([170, 30]);
+    
+        xaxisscale = d3.scaleBand()
+                        .range([0, data[0].group_names.length * (x.bandwidth() / 1.5 + 46)])
+                        .domain(data[0].group_names)
+    
+    
+    
+        color = d3.scaleOrdinal()
+        .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+    
+    
+    
+        // meat of the code
+        const svg = d3.select("#dataviz")
+          .attr("viewBox", [0, 0, width, height * data.length]);
+    
+      svg.selectAll("g")
+        .data(data)
+        .join("g")
+            .attr("transform", (d, i) => `translate(0,${yy(i)})`)
+            .attr("class", "graph")
+    
+        .selectAll("rect")
+            .data(function(d) { return d.group_percentages; })
+            .join("rect")
+            .attr("class", "bar")
+            .attr("x", (d, i) => x(i))
+            .attr("y", d => d === 0 ? 165 : y(d))
+            .attr("height", d => d === 0 ? 5 : (y(0) - y(d)))
+            .attr("width", x.bandwidth() / 1.5)
+            .attr("fill", (d,i) => color(i));
+    
+    
+            // adding titles
+            svg.selectAll("g")
+                .data(data)
+                .append("text")
+                    .text(d => d.name)
+                    .attr("transform",`translate(${width / 2}, 20)`)
+                    .attr("class", "minor")
+                    .style("font-size", "10px")
+                    .style("text-anchor", "middle");
+    
+    
+            //y axis
+            svg.selectAll(".graph")
+                .append("g")
+                .attr("transform", "translate(30,0)")
+                .call(d3.axisLeft(yaxisscale));
+    
+            //x axis
+            svg.selectAll(".graph")
+                .append("g")
+                .attr("transform", "translate(40,-20)")
+                .call(d3.axisBottom(xaxisscale))
+    
+    
+    
+    
+          return svg.node();
+    
+        }
+
+</script>
+
+
+<div id="dataviz"></div>
+
+
 {% if completion_list %}
     {% for minor in completion_list %}
         <h2>{{ minor[0] }}</h2>
