--- a/site/templates/layout.html
+++ b/site/templates/layout.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
 
         <title>{{ title }}</title>
-        
+
         <script src="https://kit.fontawesome.com/acaece2866.js" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -30,10 +30,9 @@
                 </div>
             </div>
         </nav>
+
         {% block content %}{% endblock content %}
-        <!-- <div class="container">
-            <hr class="my-4">
-        </div> -->
+
         <footer>
             <div class="container-fluid padding">
                 <div class="row text-center padding">
@@ -51,10 +50,11 @@
                 </div>
             </div>
         </footer>
+        <!-- d3.js library -->
+        <script src="https://d3js.org/d3.v5.js"></script>
         <!-- bootstrap js -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
     </body>
 </html>
