changes to d3 code and site

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -3,10 +3,9 @@
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4">Meet the Team</h1>
+            <h1 class="display-4" style="color: white;">Meet the Team</h1>
         </div>
     </div>
-    <hr>
 </div>
 
 <div class="container-fluid padding">
@@ -15,9 +14,9 @@
             <div class="card">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/ferb.png') }}" alt="Ameya Gharpure">
                 <div class="card-body center">
-                    <h4 class="card-title">Ferb</h4>
+                    <h4 class="card-title">Ameya Gharpure</h4>
                     <p class="card-text">He's cold</p>
-                    <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a>
+                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
                 </div>
             </div>
         </div>
@@ -25,9 +24,9 @@
             <div class="card">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/perry.png') }}" alt="Ashank Kumar">
                 <div class="card-body center">
-                    <h4 class="card-title">Perry the Platypus</h4>
+                    <h4 class="card-title">Ashank Kumar</h4>
                     <p class="card-text">He's cold</p>
-                    <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a>
+                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
                 </div>
             </div>
         </div>
@@ -35,9 +34,9 @@
             <div class="card">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/doofenshmirtz.png') }}" alt="Alex Roe">
                 <div class="card-body center">
-                    <h4 class="card-title">Dr. Doofenshmirtz</h4>
+                    <h4 class="card-title">Alexander Roe</h4>
                     <p class="card-text">He's cold</p>
-                    <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a>
+                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
                 </div>
             </div>
         </div>
