--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid pt-5">
-    <h1 class="center">DARS Report Analyzer</h1>
-    <hr class="break"> 
+    <h1 class="center" style="color: white;">DARS Report Analyzer</h1>
 </div>
+<!-- <div class="container">
+    <hr class="break"> 
+</div> -->
 <!-- Sexy title here -->
 <!-- put the input bar here -->
 <!-- button with form that sends form here -->
@@ -40,7 +42,7 @@
 <div class="container-fluid pt-5">
     <!-- jumbotron that gives warning/advice on what to submit if u worried ab stuff -->
     <!-- ADD FILE BAR/TITLE/DESCRIPTION OF WHAT THIS DOES -->
-    <div class="row jumbotron pt-5">
+    <div class="row jumbotron bg-transparent pt-5">
         <div class="col-xs-12 col-sm-12 col-md-9 col-md-9 col-lg-9 col-xl-9">
             <p class="lead">Information about being worried about security stuff. PLUS MORE STUFF IDK WHAT TO PUT FOR NOW HEHEHEHEH</p>
         </div>
