--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -18,7 +18,7 @@ html, body{
 }
 
 body {
-    background: linear-gradient(to bottom right, pink, #4D2BE2);
+    background: linear-gradient(to bottom right, pink, #9370DB);
 }
 
 .ml-auto .dropdown-menu {
@@ -46,8 +46,7 @@ body {
 /* jumbotron styling */
 .jumbotron{
     padding: 1rem;
-    border-radius: 0;
-    background: none;
+    /* background: none; */
     /* width: 75%; */
 }
 
@@ -56,7 +55,7 @@ body {
 }
 
 .break{
-    width: 100% !important; 
+    /* width: 100% !important;  */
     border-top: 2px solid #b4b4b4;
     margin-top: .3rem;
     margin-bottom: 1rem;
@@ -74,7 +73,7 @@ body {
 .social a{
     font-size: 2em;
     padding: 1rem;
-    color:#9a9a9a
+    color:#ffffff
 }
 
 .social a:hover,.social a:active,.social a:focus{
@@ -86,10 +85,18 @@ body {
     outline-color: white;
 }
 
+.xlabels{
+    font-family: 'Poppins', sans-serif;
+}
+
 footer{
     background-color: #3f3f3f;
     /* width: 100%; */
     padding-top: 2rem;
+}
+
+.social-text{
+    color: white;
 }
 
 
