--- a/site/templates/layout.html
+++ b/site/templates/layout.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ url_for('home') }}"><img alt="Home" src="{{ url_for('static', filename='images/logo.png') }}" width="30" height="44"></a>
                 <button class="navbar-toggler">
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="menu-item">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="{{ url_for('home') }}" class="nav-link">Home</a>
+                            <a href="{{ url_for('home') }}" class="nav-link" style="color:white">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="{{ url_for('about') }}" class="nav-link">About</a>
+                            <a href="{{ url_for('about') }}" class="nav-link" style="color:white">About</a>
                         </li>
                     </ul>
                 </div>
@@ -36,10 +36,10 @@
         <footer>
             <div class="container-fluid padding">
                 <div class="row text-center padding">
-                    <div class="col-12 social my-col">
-                        <h2>Connect With Us</h2>
+                    <div class="col-12 social social-text">
+                        <h2 style="color:white;">Connect With Us</h2>
                     </div>
-                    <div class="col-12 my-col social padding social-buttons">
+                    <div class="col-12 social padding social-buttons">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
