fixed issue with graph and added a list of lists with courses for each group

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -18,7 +18,7 @@ html, body{
 }
 
 body {
-    background: linear-gradient(to bottom right, pink, #9370DB);
+    /* background: linear-gradient(to bottom right, pink, #9370DB); */
 }
 
 .ml-auto .dropdown-menu {
