--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -38,6 +38,7 @@
             </form>
         </div>
     </div>
+</div>
 
 <div class="container-fluid pt-5">
     <!-- jumbotron that gives warning/advice on what to submit if u worried ab stuff -->
