--- a/site/templates/graph.html
+++ b/site/templates/graph.html
@@ -8,13 +8,36 @@
         {% endfor %}
     {% endif %}
 </select>
+<div>
+    {% if graph_list %}
+        {% for minor in graph_list %}
+            <ul class="legend" id="{{ loop.index }}" style="float: right; display: none;">
+                {% for g in minor.groups_info %}
+                    <li class="legenditems" style="list-style-type: square !important;">{{ minor.group_names[loop.index - 1] }}: {{ g|join(', ') }}</li>
+                {% endfor %}
+            </ul>
+        {% endfor %}
+    {% endif %}
+</div>
 <canvas id="myChart" width="400" height="200"></canvas>
+
+
+
+
 <script>
     window.onload = function(){
 
         var data = {{ graph_list | safe }};
 
         var charts = []
+
+        var colorlist = ["#98abc5",
+                         "#8a89a6",
+                         "#7b6888",
+                         "#6b486b",
+                         "#a05d56",
+                         "#d0743c",
+                         "#ff8c00"]
 
         for (var i = 0; i < data.length; i++) {
             charts.push({
@@ -25,24 +48,8 @@
                         label: '% Completed',
                         data: data[i].group_percentages,
                         borderWidth: 0,
-                        backgroundColor: [
-                            "#98abc5", 
-                            "#8a89a6", 
-                            "#7b6888", 
-                            "#6b486b", 
-                            "#a05d56", 
-                            "#d0743c", 
-                            "#ff8c00"
-                        ],
-                        borderColor: [
-                            "#98abc5", 
-                            "#8a89a6", 
-                            "#7b6888", 
-                            "#6b486b", 
-                            "#a05d56", 
-                            "#d0743c", 
-                            "#ff8c00"
-                        ]
+                        backgroundColor: colorlist,
+                        borderColor: colorlist
                     }]
                 },
                 options: {
@@ -80,6 +87,13 @@
         var ctx = document.getElementById('myChart').getContext('2d');
         var currentChart = new Chart(ctx, charts[0]);
 
+        var currentList = document.getElementsByClassName('legend')[0];
+        currentList.style.display = 'inline';
+        var currentItems = document.getElementsByClassName('legenditems')
+        for (var i = 0; i < currentItems.length; i++) {
+            currentItems[i].style.color = colorlist[0]
+        }
+
         $('#minorSelect').change(function() {
 
             if(currentChart) { currentChart.destroy(); }
@@ -87,7 +101,14 @@
             var index = $("#minorSelect").val();
 
             currentChart = new Chart(ctx, charts[index - 1]);
+
+            currentList.style.display = 'none';
+            currentList = document.getElementsByClassName('legend')[index - 1];
+            currentList.style.display = 'inline';
         })
+
+
+
     }
 
 </script>
