--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -1,42 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
+
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4" style="color: white;">Meet the Team</h1>
+            <h1 class="display-4" style="color: #6648b1;">Meet the Team</h1>
         </div>
     </div>
 </div>
-
 <div class="container-fluid padding">
     <div class="row padding align-items-stretch text-center">
         <div class="col-md-4 align-self-center">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/ferb.png') }}" alt="Ameya Gharpure">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/ameya.png') }}" alt="Ameya Gharpure" height="360" width="360">
                 <div class="card-body center">
                     <h4 class="card-title">Ameya Gharpure</h4>
-                    <p class="card-text">He's cold</p>
-                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
+                    <p class="card-text">Sophomore studying Computer Science at UIUC</p>
                 </div>
             </div>
         </div>
         <div class="col-md-4 align-self-center">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/perry.png') }}" alt="Ashank Kumar">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/ashank.png') }}" alt="Ashank Kumar" height="360" width="360">
                 <div class="card-body center">
                     <h4 class="card-title">Ashank Kumar</h4>
-                    <p class="card-text">He's cold</p>
-                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
+                    <p class="card-text">Sophomore studying Computer Science at UIUC</p>
                 </div>
             </div>
         </div>
         <div class="col-md-4 align-self-center">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/doofenshmirtz.png') }}" alt="Alex Roe">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/alex.png') }}" alt="Alex Roe" height="360" width="360">
                 <div class="card-body center">
                     <h4 class="card-title">Alexander Roe</h4>
-                    <p class="card-text">He's cold</p>
-                    <!-- <a href="#"><button type="button" class="btn btn-outline-primary">See Profile</button></a> -->
+                    <p class="card-text">Sophomore studying Computer Science and Mathematics at UIUC</p>
                 </div>
             </div>
         </div>
@@ -44,5 +41,3 @@
 </div>
 
 {% endblock content %}
-
-<!-- PICTURES OF US/DESCRIPTIONS OF US -->
