--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,15 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
+
 <div class="container-fluid pt-5">
-    <h1 class="center" style="color: white;">DARS Report Analyzer</h1>
+    <h1 class="center" style="color: #6648b1;">DARS Report Analyzer</h1>
 </div>
-<!-- <div class="container">
-    <hr class="break"> 
-</div> -->
-<!-- Sexy title here -->
-<!-- put the input bar here -->
-<!-- button with form that sends form here -->
-<div class="container-fluid pt-3">
+<div class="container pt-3">
     <div class="row">
         <div class="col-md-12 center">
             {% with messages = get_flashed_messages(with_categories=True) %}
@@ -32,20 +27,19 @@
                     <label class="custom-file-label" for="inputGroupFile03">Choose file</label>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-outline-primary">
+                <button type="submit" class="btn btn-outline-primary button">
                     Analyze Report
                 </button>
             </form>
         </div>
     </div>
 </div>
-
-<div class="container-fluid pt-5">
-    <!-- jumbotron that gives warning/advice on what to submit if u worried ab stuff -->
-    <!-- ADD FILE BAR/TITLE/DESCRIPTION OF WHAT THIS DOES -->
-    <div class="row jumbotron bg-transparent pt-5">
+<div class="container pt-5">
+    <div class="row jumbotron border-primary pt-5">
         <div class="col-xs-12 col-sm-12 col-md-9 col-md-9 col-lg-9 col-xl-9">
-            <p class="lead">Information about being worried about security stuff. PLUS MORE STUFF IDK WHAT TO PUT FOR NOW HEHEHEHEH</p>
+            <p class="lead">Please upload a pdf of your DARS Audit to find out 
+                which minors you are closest to completing. DARS Audits will <strong>NOT</strong> be saved 
+                by our site. To generate your own report click the button.</p> 
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-md-3 col-lg-3 col-xl-3">
             <a href="https://registrar.illinois.edu/academic-records/dars-audit/" target="_blank">
